# dehype-program

dehype-smart-contract/: Anchor.toml  README.md  mint-keypair.json  mint_keypair_create.sh  package-lock.json  package.json  run-migration.sh  script.tx  test.json
dehype-smart-contract/cli/: programId.ts
dehype-smart-contract/programs/dehype/: Cargo.toml
dehype-smart-contract/programs/dehype/src/: consts.rs  errors.rs  lib.rs
dehype-smart-contract/programs/dehype/src/instructions/: bet.rs  create_market.rs  create_openbook.rs  create_token.rs  initialize.rs  initialize_serum_market.rs  mint_ctrl.rs  mod.rs  resolve_market.rs  retrieve.rs  tok_meta.rs
dehype-smart-contract/programs/dehype/src/states/: answer.rs  config.rs  market.rs  mod.rs  pool.rs
dehype-smart-contract/programs/dehype/src/utils/: mod.rs
dehype-smart-contract/sdk/: dehype-program.ts
dehype-smart-contract/sdk/deploy/: dehype-keypair.json
dehype-smart-contract/sdk/idl/: dehype.json
dehype-smart-contract/sdk/types/: dehype.ts
dehype-smart-contract/tests/: localnet_test.ts
pump-fun-backend/: .env.example  README.md  package.json  server.ts
pump-fun-backend/src/: app.ts
pump-fun-backend/src/constants/: index.ts
pump-fun-backend/src/db/: dbConncetion.ts
pump-fun-frontend/: README.md
pump-smart-contract/: Anchor.toml  id.json  package-lock.json  package.json  tsconfig.json
pump-smart-contract/cli/: programId.js  programId.ts
pump-smart-contract/migrations/: deploy.ts
pump-smart-contract/sdk/: dehype-program.ts
pump-smart-contract/tests/: localnet_test.ts
(+31 files in other folders)
