[package]
name = "dehype"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dehype"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version  = "0.29.0", features = ["dex"]}
mpl-token-metadata = { version = "4.1.2" }
solana-program = ">=1.16, <1.18"
# solana-sdk = "2.0.0"
# dex = { git = "https://github.com/project-serum/serum-dex", package = "dex"}
amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor" }
# borsh = { version = "0.9", features = ["const-generics"] }